--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -14,8 +14,8 @@
           <h4 style="margin-top: 10px; margin-bottom: 10px;">Liste des mesures</h4>
           <draggable v-model="measures" :move="checkMove">
             <div v-for="(measure, index) in measures" :options="{draggable:'.item'}" style="width: 450px;">
-              <li style="font-size: 18px; list-style: none; display: flex; justify-content: space-between; cursor: pointer;"  v-on:mouseenter="displayButtons('measure', index, 'block')" v-on:mouseleave="displayButtons('measure', index, 'none')">
-                <p>{{ index + 1}} | {{ measure.quantity }}{{ measure.text1 }}{{ measure.ingredient.name }}{{ measure.text2 }}</p>
+              <li style="font-size: 18px; list-style: none; display: flex; justify-content: space-between; cursor: pointer; border: 1px solid black; height: 35px; margin-bottom: 5px; padding: 5px 5px; border-radius: 2px;"  v-on:mouseenter="displayButtons('measure', index, 'block')" v-on:mouseleave="displayButtons('measure', index, 'none')">
+                <p>#{{ index + 1}}<i class="fa fa-bars" aria-hidden="true" style="margin: 0px 10px;"></i>{{ measure.quantity }}{{ measure.text1 }}{{ measure.ingredient.name }}{{ measure.text2 }}</p>
                 <div :id="'measure_' + index" style="display: none;">
                   <a v-on:click="editMeasure(measure)"><i class="fa fa-pencil-square-o" style="font-size: 20px;" aria-hidden="true"></i></a>
                   <a v-on:click="destroyMeasure(measure, index)" style="margin: 0px 5px;"><i class="fa fa-times" style="color: #cf1b1b; font-size: 20px;" aria-hidden="true"></i></a>
@@ -75,7 +75,7 @@
           <a v-on:click="updateStep(step)"><i class="fa fa-floppy-o" style="font-size: 20px;" aria-hidden="true"></i></a>
           <a v-on:click="destroyStep(step, index)" style="margin: 0px 5px;"><i class="fa fa-times" style="color: #cf1b1b; font-size: 20px;" aria-hidden="true"></i></a>
         </div>
-        <button v-on:click="addStep" class="btn btn-sm btn-success" style="margin-bottom: 20px; text-align: center;">Ajouter une nouvele étape</button>
+        <button v-on:click="addStep" class="btn btn-sm btn-success" style="margin-bottom: 20px; text-align: center;">Nouvelle étape</button>
       </div>
     </div>
 
