--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -35,8 +35,7 @@
             </template>
             <input v-model="newMeasure.text2" type="text" class="form-control" placeholder="Texte 2" style="width: 150px; height: 32px; margin-right: 5px;">
             <a v-on:click="createMeasure(newMeasure)">
-              <i v-if="checkEditMeasure == false" class="fa fa-plus-square-o" style="font-size: 20px;" aria-hidden="true"></i>
-              <i v-else class="fa fa-floppy-o" style="font-size: 20px;" aria-hidden="true"></i>
+              <i v-if="checkNewMeasure == true" class="fa fa-floppy-o" style="font-size: 20px;" aria-hidden="true"></i>
             </a>
           </div>
         </div>
