--- a/app/assets/stylesheets/recipes/_add_details.scss
+++ b/app/assets/stylesheets/recipes/_add_details.scss
@@ -1,6 +1,16 @@
 #recipe_add_details{
-  display: flex;
-  justify-content: space-between;
+  .details {
+    display: flex;
+    justify-content: space-between;
+  }
+  .recipe-steps {
+
+  }
+  .item-center-space-around {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
 
 .ivu-select{
