--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
 
 <div class="container" id="recipe_add_details" v-cloak>
-  <div class="recipe-basics">
-    <div v-if="!editBasics"  class="text-center">
+  <div class="recipe-info">
+    <div v-if="!editBasics" class="item-center-space-around">
       <a :href="recipe.url"><h2 style="font-weight: bolder">{{ recipe.title }}</h2></a>
       <a v-on:click="editBasics = true">
         <i class="fa fa-pencil-square-o" style="font-size: 20px;" aria-hidden="true"></i>
@@ -13,6 +13,23 @@
       <a v-on:click="editRecipe">
         <i class="fa fa-floppy-o" style="font-size: 20px;" aria-hidden="true"></i>
       </a>
+    </div>
+    <div id="recipe-basics" class="item-center-space-around">
+      <div class="item-center-space-around">
+        <h5>Couverts</h5>
+        <h5 v-if="!editBasics">{{ recipe.servings }}</h5>
+        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.servings">
+      </div>
+      <div class="item-center-space-around">
+        <h5>Temps de préparation</h5>
+        <h5 v-if="!editBasics">{{ recipe.preparationTime }}</h5>
+        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.preparationTime">
+      </div>
+      <div class="item-center-space-around">
+        <h5>Temps de cuisson</h5>
+        <h5 v-if="!editBasics">{{ recipe.cookingTime }}</h5>
+        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.cookingTime">
+      </div>
     </div>
   </div>
 
