--- a/app/assets/stylesheets/recipes/_show_recipe.scss
+++ b/app/assets/stylesheets/recipes/_show_recipe.scss
@@ -85,7 +85,7 @@
   padding: 14px 30px;
 }
 
-.email-ingredients-button:hover, a:hover {
+.email-ingredients-button:hover {
   background: #777;
   color: white;
   text-decoration: none;
