--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,4 @@
-   <div class="container">
+   <div class="container" id="recipe-show">
      <div class="entete">
        <div class="recipe-title">
         <h2><%= @recipe.title %></h2>
